--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
       <div class="contents">
         <h3><a id="work-link">Proyek</a></h3>
         <div class="contents-item">
-          <img src="images/1.png">
+          <img src="1.png">
           <p>Image 1</p>
         </div>
         <div class="contents-item">
-          <img src="images/2.png">
+          <img src="2.png">
           <p>Image 2</p>
         </div>
         <div class="contents-item">
