--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="main">
       <div class="copy-container">
         <h1>ALMASJ<span>ID</span></h1>
-        <img src="images/masjid1.png" alt="Masjid">
+        <img src="masjid1.png" alt="Masjid">
       </div>
       
       <div class="about">
@@ -33,15 +33,15 @@
         <h3><a id="work-link">Proyek</a></h3>
         <div class="contents-item">
           <img src="1.png">
-          <p>Image 1</p>
+          <p>ALMASJID 1</p>
         </div>
         <div class="contents-item">
           <img src="2.png">
-          <p>Image 2</p>
+          <p>ALMASJID 2</p>
         </div>
         <div class="contents-item">
-          <img src="images/3.png">
-          <p>Image 3</p>
+          <img src="3.png">
+          <p>ALMASJID 3</p>
         </div>
         
       </div>
